WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314306
Twitch.tv sometimes at ad transition with some live stream.
https://bugs.webkit.org/show_bug.cgi?id=314306
Summary
Twitch.tv sometimes at ad transition with some live stream.
Jean-Yves Avenard [:jya]
Reported
2026-05-07 02:25:22 PDT
STR: Play a live stream Wait, often at the end of an ad, playback will stall. Test case to reproduce the issue from extracted content:
https://jyavenard.github.io/htmltests/tests/twitch-stall/combined.html
Click on “run replay (content -> ad)” playback will stall at currentTime=10.078 The buffered range is fragmented “buffered=[0.079..10.078] [12.067..60.066] “ It plays on chrome fine and there’s no gap.
rdar://176446372
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2026-05-07 02:54:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64457
EWS
Comment 2
2026-05-14 09:50:19 PDT
Committed
313253@main
(93e7a14ff5bc): <
https://commits.webkit.org/313253@main
> Reviewed commits have been landed. Closing PR #64457 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug