Source/WebCore/platform/mock/mediasource/MockSourceBufferPrivate.cpp
@@ -69,6 +69,7 @@ private:
     void offsetTimestampsBy(const MediaTime& offset) override { m_box.offsetTimestampsBy(offset); }
     void setTimestamps(const MediaTime& presentationTimestamp, const MediaTime& decodeTimestamp) override { m_box.setTimestamps(presentationTimestamp, decodeTimestamp); }
     Ref<MediaSample> createNonDisplayingCopy() const override;
+    Ref<MediaSample> createCopyWithAdjustedStartTime(const MediaTime& shift) const override;
 
     unsigned NODELETE generation() const { return m_box.generation(); }
 
@@ -100,6 +101,16 @@ Ref<MediaSample> MockMediaSample::createNonDisplayingCopy() const
 {
     auto copy = MockMediaSample::create(m_box);
     copy->m_box.setFlag(MockSampleBox::IsNonDisplaying);
+    return copy;
+}
+
+Ref<MediaSample> MockMediaSample::createCopyWithAdjustedStartTime(const MediaTime& shift) const
+{
+    MediaTime clampedShift = std::max(MediaTime::zeroTime(), std::min(shift, m_box.duration()));
+
+    auto copy = MockMediaSample::create(m_box);
+    copy->m_box.setTimestamps(m_box.presentationTimestamp() + clampedShift, m_box.decodeTimestamp() + clampedShift);
+    copy->m_box.setDuration(m_box.duration() - clampedShift);
     return copy;
 }
 
